--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "private": true,
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lerna": "^4.0.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
   "workspaces": [
