--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "composite": true
   },
   // required for monorepo?
-  "references": [{ "path": "./packages/shared/" }]
+  "references": [{ "path": "./packages/shared/tsconfig.json" }]
 }
