--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
   "name": "monorepo-template",
   "private": true,
+  "scripts": {
+    "bootstrap": "yarn install; lerna bootstrap;",
+    "dev:frontend": "lerna run --scope @monorepo/frontend --stream dev"
+  },
+  "dependencies": {
+    "next": "^12.0.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.7.0",
@@ -10,6 +21,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "lerna": "^4.0.0",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "workspaces": [
