--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "private": true,
   "scripts": {
     "bootstrap": "yarn install; lerna bootstrap;",
-    "dev:frontend": "lerna run --scope @monorepo/frontend --stream dev"
+    "dev:frontend": "lerna run --scope @monorepo/frontend --stream dev",
+    "build": "lerna run build --stream",
+    "watch": "lerna run watch --stream",
+    "clean": "lerna run clean --parallel",
+    "lint": "lerna run lint --parallel",
+    "test": "lerna run test  --parallel"
   },
   "dependencies": {
     "next": "^12.0.8",
@@ -11,6 +16,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/next": "^9.0.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
@@ -19,8 +25,10 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.7",
     "lerna": "^4.0.0",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
