--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "tsc": "tsc -p ./tsconfig.json",
     "lint": "eslint --ext=jsx,ts,tsx src",
-    "lint:fix": "eslint --ext=jsx,ts,tsx src --fix"
+    "lint:fix": "eslint --ext=jsx,ts,tsx src --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@monorepo/shared": "^1.0.0",
