:bug: fix nestjs prod and hot reload

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "scripts": {
     "bootstrap": "yarn install; lerna bootstrap; lerna run --scope=@monorepo/mobile postinstall",
-    "dev:backend": "lerna run --scope @monorepo/backend --stream start",
+    "dev:backend": "lerna run --scope @monorepo/backend --stream start:dev",
     "dev:frontend": "lerna run --scope @monorepo/frontend --stream start",
     "dev:mobile": "lerna run --scope @monorepo/mobile --stream start",
+    "dev:shared": "lerna run --scope @monorepo/shared --stream watch",
     "dev:mobile:clear": "lerna run --scope @monorepo/mobile --stream start:clear",
+    "build:backend": "lerna run --scope @monorepo/backend --stream build",
+    "build:shared": "lerna run --scope @monorepo/shared --stream build",
     "build": "lerna run build --stream",
     "watch": "lerna run watch --stream",
     "clean": "lerna run clean --parallel",
@@ -14,7 +17,8 @@
     "test": "lerna run test  --parallel",
     "tsc": "lerna run tsc  --parallel",
     "build:vercel": "cd packages/frontend && yarn run next build && cd ../.. && cp -r ./packages/frontend/.next . && cp -r ./packages/frontend/src/public .",
-    "build:apk": "lerna run --scope=@monorepo/mobile --stream build:apk"
+    "build:apk": "lerna run --scope=@monorepo/mobile --stream build:apk",
+    "backend:prod": "lerna run --scope @monorepo/backend --stream start:prod"
   },
   "dependencies": {
     "metro-config": "^0.66.2",
