:sparkles: deploy nestjs as docker on heroku

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -14,4 +14,7 @@ RUN yarn install
 RUN lerna bootstrap
 COPY . .
 
-CMD [ "yarn", "dev:backend" ]
+RUN yarn build:shared
+RUN yarn build:backend
+
+CMD node packages/backend/dist/src/main
