--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "baseUrl": "./src",
     "incremental": true,
+    "noEmit": true,
     "forceConsistentCasingInFileNames": false,
     "target": "es2017"
   },
