--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint --ext=jsx,ts,tsx src --fix",
     "test": "jest",
     "postinstall": "expo-yarn-workspaces postinstall",
+    "eas-build-post-install": "cd ../.. && yarn build:shared",
     "build:apk": "eas build --platform android --profile productionApk"
   },
   "dependencies": {
